[package]
name = "tbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
jsonpath_lib = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "1"
tokio = { version = "*", features = ["full"] }
reqwest = "0.11"
config = "*"
